Fixed overflow issue on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,7 +9,7 @@
   // }
 
   .router-container {
-    overflow: hidden;
+    overflow-x: hidden;
   }
 }
 
